--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="css/styles.css">
-    <script src="js/app.js"></script>
 </head>
 <body>
     <h1>Something here</h1>
+
+    <button id="btn-translate"> Translate </button>
+    <script src="js/app.js"></script>
+
 </body>
 </html>
