--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
 <body>
     <h1>Something here</h1>
 
+
+    <textarea name="text"  id="text-translate" cols="50" rows="10" placeholder="Enter text to convert into banana language"> </textarea>
+    <br>
     <button id="btn-translate"> Translate </button>
+
+
     <script src="js/app.js"></script>
 
 </body>
