input output processed

--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
     <br>
     <button id="btn-translate"> Translate </button>
 
+    <div>Output will go here 👇</div>
+    <div id="output">
+
+    </div>
 
     <script src="js/app.js"></script>
 
